--- a/app/templates/scenarios/scenario.hbs
+++ b/app/templates/scenarios/scenario.hbs
@@ -1,15 +1,22 @@
-<h1>{{model.name}}</h1>
-<div class="navigation">
-  {{#link-to 'scenarios.scenario.stats' model class="sub-nav"}}
-    STATS
-  {{/link-to}}
+<div class="scenarios-content">
+  <div class="scenario-name">
+    <h1>{{model.name}}</h1>
+  </div>
+  <img class="bordered-headshot" src="/images/scenario-headshot-{{model.id}}.png">
+  <h3>"{{model.motto}}"</h3>
+  <div style="clear:both;"></div>
+  <div class="navigation">
+    {{#link-to 'scenarios.scenario.stats' model class="sub-nav"}}
+      STATS
+    {{/link-to}}
 
-  {{#link-to 'scenarios.scenario.inventory' model class="sub-nav"}}
-    INVENTORY
-  {{/link-to}}
+    {{#link-to 'scenarios.scenario.inventory' model class="sub-nav"}}
+      INVENTORY
+    {{/link-to}}
 
-  {{#link-to 'scenarios.scenario.results' model class="sub-nav"}}
-    RESULTS
-  {{/link-to}}
+    {{#link-to 'scenarios.scenario.results' model class="sub-nav"}}
+      RESULTS
+    {{/link-to}}
+  </div>
+  {{outlet}}
 </div>
-{{outlet}}
