--- a/app/templates/scenarios/scenario/results.hbs
+++ b/app/templates/scenarios/scenario/results.hbs
@@ -1,4 +1,9 @@
 {{outlet}}
+<div class="scenario-name">
+  <h1>{{model.name}}</h1>
+</div>
+<h3>"{{model.motto}}"</h3>
+
 <h2 class="job-title">
   Year {{selectedYear.years}}:
   {{selectedYear.title}}
