--- a/app/templates/scenarios/scenario/results.hbs
+++ b/app/templates/scenarios/scenario/results.hbs
@@ -1,17 +1,9 @@
-{{outlet}}
-<div class="scenario-name">
-  <h1>{{model.name}}</h1>
-</div>
-<h3>"{{model.motto}}"</h3>
-
 <h2 class="job-title">
   Year {{selectedYear.years}}:
   {{selectedYear.title}}
 </h2>
-<h4 class="track-name">Track: {{model.track}}</h4>
+<div class="results">
 
-{{slider-control setYear='setYear' activeYear=year}}
-<div class="inventory">
   {{stats-bar value=selectedYear.income label="INCOME" class="results-bar"}}
 
   {{stats-bar value=selectedYear.stress label="STRESS" class="results-bar"}}
@@ -21,3 +13,4 @@
   {{stats-bar value=selectedYear.satisfaction label="SATISFACTION" class="results-bar"}}
   {{stats-bar value=selectedYear.impact label="IMPACT" class="results-bar"}}
 </div>
+{{slider-control setYear='setYear' activeYear=year}}
