--- a/app/templates/scenarios/scenario/inventory.hbs
+++ b/app/templates/scenarios/scenario/inventory.hbs
@@ -1,3 +1,4 @@
+<h1>Character Inventory</h1>
 <div class="inventory">
   {{stats-bar value=model.inventory.leverage label="LEVERAGE" class="inventory-bar"}}
 
