--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -30,6 +30,12 @@ a {
   color: black;
 }
 
+a:hover, a:active, a.active {
+  text-decoration: none;
+  color: black;
+  background-color: cyan;
+}
+
 .stats-bar, .results-bar, .inventory-bar {
   margin-bottom: 25px;
 }
@@ -66,23 +72,21 @@ a {
   fill: cyan;
 }
 
+.scenario-name {
+  color: red;
+}
+
 .scenarios-content {
-  margin-top: 25px;
+  margin-top: 50px;
 }
 
 .scenarios-info {
   box-sizing: border-box;
-  display: float;
-  float: left;
-  width: 40%;
   padding: 20px;
 }
 
 .scenarios-graphs {
   box-sizing: border-box;
-  display: float;
-  float: left;
-  width: 60%;
   padding: 20px;
 }
 
@@ -109,26 +113,16 @@ a {
 
 }
 
-.sub-nav .active {
-  background-color: cyan;
-}
-
 .navigation {
-  padding: 25px;
-  position: fixed;
-  top: 15px;
-  right: 0;
+  text-align: right;
 }
 
 .sub-nav {
   background-color: red;
-  border: 4px solid white;
-  margin: 6px;
+  border: 3px solid white;
   padding: 10px;
   height: 100px;
-  width: 100px;
   color: white;
-  text-align: right;
 }
 
 .sub-nav.active {
