--- a/app/templates/scenarios/scenario/stats.hbs
+++ b/app/templates/scenarios/scenario/stats.hbs
@@ -1,8 +1,8 @@
 <h1>Character Stats</h1>
 <div class="stats">
-  {{stats-bar value=model.stats.skill label="SKILL" class="stats-bar"}}
+  {{increment-scale value=model.stats.skill label="SKILL" class="stats-bar"}}
 
-  {{stats-bar value=model.stats.synthesis label="SYNTHESIS" class="stats-bar"}}
+  {{increment-scale value=model.stats.synthesis label="SYNTHESIS" class="stats-bar"}}
 
-  {{stats-bar value=model.stats.vision label="VISION" class="stats-bar"}}
+  {{increment-scale value=model.stats.vision label="VISION" class="stats-bar"}}
 </div>
