--- a/app/templates/character-select.hbs
+++ b/app/templates/character-select.hbs
@@ -3,7 +3,7 @@
   <div class="character-select-tiles">
     {{#each model as |scenario|}}
       {{#link-to 'scenarios.scenario' scenario class=""}}
-        <img class="bordered-headshot character-select-tile" src="/images/scenario-anim-{{scenario.id}}.gif" width="160" height="160">
+        <img class="bordered-headshot-small character-select-tile" src="/images/scenario-headshot-{{scenario.id}}.png" width="120" height="120">
       {{/link-to}}
     {{/each}}
   </div>
