--- a/app/templates/scenarios/scenario/stats.hbs
+++ b/app/templates/scenarios/scenario/stats.hbs
@@ -2,7 +2,7 @@
 <div class="stats">
   {{increment-scale value=model.stats.skill label="SKILL" class="stats-bar"}}
 
-  {{increment-scale value=model.stats.synthesis label="SYNTHESIS" class="stats-bar"}}
+  {{increment-scale value=model.stats.connection label="CONNECTION" class="stats-bar"}}
 
   {{increment-scale value=model.stats.vision label="VISION" class="stats-bar"}}
 </div>
