--- a/app/templates/scenarios/scenario.hbs
+++ b/app/templates/scenarios/scenario.hbs
@@ -1,29 +1,27 @@
 <div class="navigation row">
-  {{#link-to 'character-select' class="sub-nav"}}
+  <LinkTo @route='character-select' class="sub-nav">
     HOME
-  {{/link-to}}
-
-  {{#link-to 'scenarios.scenario.stats' model class="sub-nav"}}
+  </LinkTo>
+  <LinkTo @route='scenarios.scenario.stats' @model={{@model}} class="sub-nav">
     STATS
-  {{/link-to}}
-
-  {{#link-to 'scenarios.scenario.inventory' model class="sub-nav"}}
+  </LinkTo>
+  <LinkTo @route='scenarios.scenario.inventory' @model={{@model}} class="sub-nav">
     INVENTORY
-  {{/link-to}}
-
-  {{#link-to 'scenarios.scenario.results' model class="sub-nav"}}
+  </LinkTo>
+  <LinkTo @route='scenarios.scenario.results' @model={{@model}} class="sub-nav">
     RESULTS
-  {{/link-to}}
+  </LinkTo>
+  
 </div>
 <div class="scenarios-content row">
   <div class="scenarios-info col-xs-12 col-md-4">
-    <img class="animated-character" src="/images/scenario-anim-{{model.id}}.gif">
-    <h3>"{{model.motto}}"</h3>
-    {{#if onResults}}
+    <img class="animated-character" src="/images/scenario-anim-{{@model.id}}.gif">
+    <h3>"{{@model.motto}}"</h3>
+    {{#if this.onResults}}
       <div class="scenario-name">
-        <h1>{{model.name}}</h1>
+        <h1>{{@model.name}}</h1>
       </div>
-      <h4 class="track-name">Track: {{model.track}}</h4>
+      <h4 class="track-name">Track: {{@model.track}}</h4>
     {{/if}}
   </div>
   <div class="scenarios-graphs col-xs-12 col-md-8">
